[package]
name = "diesel_poster"
version = "0.1.0"
authors = ["Peter-Jan Gootzen <peterjan@gootzen.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
